More JavaFX updates